feat: Implement drag-n-drop ordering for exercises routine
