# backend/pkg/workouts/workouts.swagger.json
@@ -475,6 +475,46 @@
         ]
       }
     },
+    "/v1/routines/{routineId}/exercise_instances/order": {
+      "post": {
+        "summary": "Метод для установки порядка упражнений в рутине",
+        "operationId": "RoutineService_SetExerciseOrder",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "routineId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/RoutineServiceSetExerciseOrderBody"
+            }
+          }
+        ],
+        "tags": [
+          "RoutineService"
+        ]
+      }
+    },
     "/v1/routines/{routineId}/exercise_instances/{exerciseInstanceId}": {
       "get": {
         "summary": "Получить информацию об упражнении в рутине",
@@ -1537,6 +1577,17 @@
       "required": [
         "setType"
       ]
+    },
+    "RoutineServiceSetExerciseOrderBody": {
+      "type": "object",
+      "properties": {
+        "exerciseInstanceIds": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        }
+      }
     },
     "RoutineServiceUpdateRoutineBody": {
       "type": "object",
